--- a/src/templates/actors/fragments/char/tab-bio.html
+++ b/src/templates/actors/fragments/char/tab-bio.html
@@ -4,6 +4,20 @@
   data-tab="biography"
 >
   <div class="flex gap-1">
+      <input
+      class="px-1.5 py-3.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+      name="data.class"
+      value="{{actor.data.data.class}}"
+      placeholder="{{localize 'swnr.sheet.class'}}"
+      type="text"
+    />
+    <input
+      class="px-1.5 py-3.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+      name="data.species"
+      type="text"
+      value="{{actor.data.data.species}}"
+      placeholder="{{localize 'swnr.sheet.species'}}"
+    />
     <input
       class="px-1.5 py-3.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
       name="data.homeworld"
