--- a/src/templates/actors/fragments/char/tab-bio.html
+++ b/src/templates/actors/fragments/char/tab-bio.html
@@ -41,7 +41,7 @@
     />
   </div>
   <div class="bg-gray-300 border border-gray-700 rounded-md p-2 mt-4">
-    {{editor content=data.data.biography target="data.biography" button=true
-    owner=owner editable=editable}}
+    {{editor bioHTML target="data.biography" button=true
+    owner=owner editable=editable engine="prosemirror"}}
   </div>
 </div>
