--- a/src/templates/actors/fragments/char/tab-bio.html
+++ b/src/templates/actors/fragments/char/tab-bio.html
@@ -42,6 +42,6 @@
   </div>
   <div class="bg-gray-300 border border-gray-700 rounded-md p-2 mt-4">
     {{editor bioHTML target="data.biography" button=true
-    owner=owner editable=editable engine="prosemirror"}}
+    owner=owner editable=editable }}
   </div>
 </div>
